--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.553.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-redis-cache": "^1.1.3",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "mysql-redis": "^0.7.1",
     "nodemon": "^1.19.4",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "redis": "^2.8.0",
     "uuid": "^3.3.3"
   }
